# barcode-server

./: Dockerfile  Makefile  Pipfile  README.md  barcode_forwarder.yaml  barcode_server.yaml  docker-compose.yml  pyproject.toml  setup.py
.github/: dependabot.yml  stale.yml
.github/workflows/: codeql-analysis.yml  create_release.yml  dockerimage-latest.yml  dockerimage-release.yml  dockerx-latest.yml  python_publish.yaml  pythonpackage.yml  release_drafter.yml  update_docker_description.yml
barcode_forwarder/: barcode.py  config.py  const.py  main.py  webserver.py
barcode_server/: barcode.py  cli.py  config.py  const.py  keyevent_reader.py  main.py  stats.py  util.py  webserver.py
barcode_server/notifier/: __init__.py  http.py  mqtt.py  ws.py
tests/: __init__.py  api_test.py  barcode_forwarder.yaml  barcode_reader_test.py  barcode_server.yaml  key_event_reader_test.py  notifier_test.py  product_manager_test.py  websocket_notifier_test.py
